--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
   --cloud: #f4f4fd;
   --cornflower: #e7e9fc;
   --ocean: #404bbf;
+  --lightslate: #8e8f99;
+  --navyblue-modal: rgba(46, 47, 66, 0.4);
 }
 
 /* /Variables */
@@ -558,6 +560,7 @@ ol {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 24px;
 }
 
 .modal-window-btn {
@@ -598,6 +601,40 @@ ol {
   visibility: hidden;
   pointer-events: none;
 }
+
+/* start modal form */
+
+.contacts-form-desc {
+  color: var(--navyblue);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  margin-top: 72px;
+}
+
+.contacts-form-field {
+  display: block;
+  margin-bottom: 18px;
+}
+
+.contacts-form-field-desc {
+  color: var(--lightslate);
+  font-size: 12px;
+  line-height: 1.2; /* 116.667% */
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+}
+
+.contacts-form-input {
+  width: 100%;
+  height: 58px;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal);
+}
+/* end modal form */
 
 /* end modal window */
 
