--- a/css/styles.css
+++ b/css/styles.css
@@ -630,9 +630,11 @@ ol {
 
 .contacts-form-input {
   width: 100%;
-  height: 58px;
+  height: 40px;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal);
+  padding-left: 62px;
+  font-size: 18px;
 }
 /* end modal form */
 
