--- a/css/styles.css
+++ b/css/styles.css
@@ -635,7 +635,77 @@ ol {
   border: 1px solid var(--navyblue-modal);
   padding-left: 62px;
   font-size: 18px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.contacts-form-input:focus {
+  border-color: var(--iris);
+  outline-offset: 4px;
+  outline-color: transparent;
+}
+
+.contacts-form-input-icon {
+  fill: var(--navyblue);
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-form-input:focus + .contacts-form-input-icon {
+  fill: var(--iris);
+}
+
+.contacts-form-input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.contacts-form-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  padding: 8px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-form-comment:focus {
+  border-color: var(--iris);
+  outline-color: transparent;
+  outline-offset: 4px;
+}
+
+.contacts-form-comment::placeholder {
+  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.04em;
+  font-size: 18px;
+}
+
+.contacts-form-checkbox-label {
+  display: block;
+  color: var(--lightslate, #8e8f99);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.04em;
+  margin-bottom: 24px;
+}
+.contacts-form-link {
+  color: var(--iris);
+}
+
+.contacts-form-own-checkbox {
+  padding: 2px;
+  border-radius: 2px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+}
+
 /* end modal form */
 
 /* end modal window */
