--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ ol {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .main-title {
