--- a/css/styles.css
+++ b/css/styles.css
@@ -561,7 +561,7 @@ ol {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
 }
 
 .modal-window-btn {
@@ -613,7 +613,6 @@ ol {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   margin-bottom: 16px;
-  margin-top: 72px;
 }
 
 .contacts-form-wrapper {
@@ -624,12 +623,16 @@ ol {
   display: block;
   color: var(--lightslate);
   font-size: 12px;
-  line-height: 1.2; /* 116.667% */
+  line-height: 1.17; /* 116.667% */
   letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
 
 .contacts-form-field-desc {
+}
+
+.contacts-textarea-wrapper {
+  margin-bottom: 16px;
 }
 
 .contacts-form-input {
@@ -673,8 +676,14 @@ ol {
   height: 120px;
   resize: none;
   border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  color: rgba(46, 47, 66, 0.4);
+  letter-spacing: 0.04em;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   padding: 8px 16px;
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -705,6 +714,10 @@ ol {
 }
 .contacts-form-link {
   color: var(--iris);
+}
+
+.contacts-checkbox-wrapper {
+  margin-bottom: 24px;
 }
 
 .contacts-form-checkbox {
