--- a/css/styles.css
+++ b/css/styles.css
@@ -534,7 +534,64 @@ ol {
   fill: #f4f4fd;
 }
 
-/* /Footer section */
+.footer-input-desc {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+}
+
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-form-label {
+}
+
+.footer-form-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid var(--white);
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--white);
+}
+
+.footer-form-input::placeholder {
+  color: var(--white);
+}
+
+.footer-form-btn {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white);
+  cursor: pointer;
+  background-color: var(--iris);
+  border: none;
+  border-radius: 4px;
+}
+
+.footer-form-btn-icon {
+  margin-left: 16px;
+}
+
+/* end Footer section */
 
 /* start modal window */
 
@@ -703,7 +760,7 @@ ol {
 }
 
 .contacts-form-checkbox-label {
-  display: flex;
+  display: block;
   align-items: center;
   color: var(--lightslate, #8e8f99);
   font-size: 12px;
@@ -725,7 +782,7 @@ ol {
   appearance: none;
 }
 
-.contacts-form-checkbox:checked + .contacts-form-own-checkbox {
+.contacts-form-checkbox:checked ~ .form-checkbox-icon-wrapper {
   fill: var(--cloud);
   background-color: var(--ocean);
   border: none;
@@ -733,6 +790,19 @@ ol {
 
 .contacts-form-checkbox:focus + .contacts-form-own-checkbox {
   outline: 2px solid rgba(0, 0, 255, 0.5);
+}
+
+.form-checkbox-icon-wrapper {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
 .contacts-form-own-checkbox {
