--- a/css/styles.css
+++ b/css/styles.css
@@ -514,6 +514,10 @@ ol {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-socials-container {
+  margin-right: 80px;
+}
+
 .footer-socials-link {
   width: 100%;
   height: 100%;
